# bandcamp

./: .gitignore  README.md  example.code-workspace  pyproject.toml
src/example/: example.py
tests/: test_bandcamp.py
