[project]
name = "bandcamp"
version = "0.1.0"
description = "Real Python Tutoral for Selenium"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Bill Lueckenbach", email = "bill.lueckenbach@gmail.com" }
]
keywords = ["bandcamp", "selenium", "web scraping", "python", "real python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
    "selenium>=4.8",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "ruff"]
docs = ["sphinx"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

# -------------------------------
# Ruff configuration
# -------------------------------
[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"